<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2016 Zhang Hai <Dreaming.in.Code.ZH@Gmail.com>
  ~ All Rights Reserved.
  -->

<resources>

    <string name="activity_not_found">无法找到执行此操作的应用</string>

    <string name="app_name">豆芽 API Key</string>

    <string name="install_douya_title">安装豆芽</string>
    <string name="install_douya_content">这个应用可以为豆芽提供 API Key，从而使得豆芽可以访问豆瓣 API 获取数据。\n\n为了进行设置，您需要首先安装豆芽。</string>
    <string name="install_douya_action_refresh_refresh">我已安装豆芽，请重新检查</string>
    <string name="install_douya_action_refresh_forward">您已安装豆芽，请点击“继续”</string>
    <string name="install_douya_toast_not_installed">未找到豆芽，请点击“安装豆芽”</string>
    <string name="install_douya_toast_lower_than_minimum_version">豆芽版本过低，请点击“安装豆芽”以更新</string>
    <string name="install_douya_forward_install">安装豆芽</string>
    <string name="install_douya_forward_forward">继续</string>

    <string name="api_key_title">设置 API Key</string>
    <string name="api_key_douban_content_douban">如果您安装豆瓣官方应用，则可以直接获取 API Key。</string>
    <string name="api_key_douban_action_refresh_refresh">我已安装豆瓣，请重新检查</string>
    <string name="api_key_douban_action_refresh_forward">您已安装豆瓣，请点击“设置”以继续</string>
    <string name="api_key_douban_content_custom">或者，如果您希望进行自定义，您也可以：</string>
    <string name="api_key_douban_action_custom">手动填写 API Key</string>
    <string name="api_key_douban_toast_not_installed">未找到豆瓣，请点击“安装豆瓣”</string>
    <string name="api_key_custom_content_custom">自定义 API Key：</string>
    <string name="api_key_custom_api_v2_api_key_hint">API V2 API Key</string>
    <string name="api_key_custom_api_v2_api_secret_hint">API V2 API Secret</string>
    <string name="api_key_custom_frodo_api_key_hint">Frodo API Key</string>
    <string name="api_key_custom_frodo_api_secret_hint">Frodo API Secret</string>
    <string name="api_key_custom_content_douban">或者，如果您没有这些信息，您也可以：</string>
    <string name="api_key_custom_action_douban">通过豆瓣官方应用获取 API Key</string>
    <string name="api_key_forward_install">安装豆瓣</string>
    <string name="api_key_forward_set">设置</string>
    <string name="api_key_error_empty">您尚未填写完成 API Key / Secret</string>

    <string name="finish_title">设置完成</string>
    <string name="finish_content">已成功为豆芽设置 API Key，您可以点击“打开豆芽”尝试登录。</string>
    <string name="finish_forward">打开豆芽</string>

    <string name="get_api_key_and_secret_error_frodo_not_found">获取失败，未安装官方豆瓣 App。</string>
    <string name="get_api_key_and_secret_error_decryption">解密失败，官方可能更改了实现。</string>
</resources>
