<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2016 Zhang Hai <Dreaming.in.Code.ZH@Gmail.com>
  ~ All Rights Reserved.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/douban_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/wizard_content_horizontal_margin"
                android:layout_marginRight="@dimen/wizard_content_horizontal_margin"
                android:layout_marginTop="@dimen/wizard_content_vertical_margin"
                android:text="@string/api_key_douban_content_douban"
                android:textAppearance="@style/TextAppearance.Wizard.Content" />

            <Button
                android:id="@+id/douban_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/wizard_content_horizontal_margin_with_12dp_padding"
                android:layout_marginRight="@dimen/wizard_content_horizontal_margin_with_12dp_padding"
                android:layout_marginTop="@dimen/wizard_content_vertical_margin_with_16dp_padding"
                android:layout_marginBottom="@dimen/wizard_content_vertical_margin_with_16dp_padding"
                android:textSize="@dimen/wizard_content_text_size"
                style="@style/Widget.AppCompat.Button.Borderless.Colored" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/wizard_content_horizontal_margin"
                android:layout_marginRight="@dimen/wizard_content_horizontal_margin"
                android:layout_marginTop="@dimen/wizard_content_vertical_margin"
                android:text="@string/api_key_douban_content_custom"
                android:textAppearance="@style/TextAppearance.Wizard.Content" />

            <Button
                android:id="@+id/douban_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/wizard_content_horizontal_margin_with_12dp_padding"
                android:layout_marginRight="@dimen/wizard_content_horizontal_margin_with_12dp_padding"
                android:layout_marginTop="@dimen/wizard_content_vertical_margin_with_16dp_padding"
                android:layout_marginBottom="@dimen/wizard_content_vertical_margin_with_16dp_padding"
                android:text="@string/api_key_douban_action_custom"
                android:textSize="@dimen/wizard_content_text_size"
                style="@style/Widget.AppCompat.Button.Borderless.Colored" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/custom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/wizard_content_horizontal_margin"
                android:layout_marginRight="@dimen/wizard_content_horizontal_margin"
                android:layout_marginTop="@dimen/wizard_content_vertical_margin"
                android:text="@string/api_key_custom_content_custom"
                android:textAppearance="@style/TextAppearance.Wizard.Content" />

            <me.zhanghai.android.materialedittext.MaterialEditText
                android:id="@+id/custom_api_v2_api_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/wizard_content_horizontal_margin_with_4dp_padding"
                android:layout_marginRight="@dimen/wizard_content_horizontal_margin_with_4dp_padding"
                android:layout_marginTop="4dp"
                android:hint="@string/api_key_custom_api_v2_api_key_hint"
                android:inputType="text"
                android:maxLines="1" />

            <me.zhanghai.android.materialedittext.MaterialEditText
                android:id="@+id/custom_api_v2_api_secret"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/wizard_content_horizontal_margin_with_4dp_padding"
                android:layout_marginRight="@dimen/wizard_content_horizontal_margin_with_4dp_padding"
                android:hint="@string/api_key_custom_api_v2_api_secret_hint"
                android:inputType="text"
                android:maxLines="1" />

            <me.zhanghai.android.materialedittext.MaterialEditText
                android:id="@+id/custom_frodo_api_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/wizard_content_horizontal_margin_with_4dp_padding"
                android:layout_marginRight="@dimen/wizard_content_horizontal_margin_with_4dp_padding"
                android:hint="@string/api_key_custom_frodo_api_key_hint"
                android:inputType="text"
                android:maxLines="1" />

            <me.zhanghai.android.materialedittext.MaterialEditText
                android:id="@+id/custom_frodo_api_secret"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/wizard_content_horizontal_margin_with_4dp_padding"
                android:layout_marginRight="@dimen/wizard_content_horizontal_margin_with_4dp_padding"
                android:layout_marginBottom="@dimen/wizard_content_vertical_margin_with_8dp_padding"
                android:hint="@string/api_key_custom_frodo_api_secret_hint"
                android:imeActionId="@integer/ime_action_done"
                android:imeActionLabel="@string/api_key_forward_set"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/wizard_content_horizontal_margin"
                android:layout_marginRight="@dimen/wizard_content_horizontal_margin"
                android:layout_marginTop="@dimen/wizard_content_vertical_margin"
                android:text="@string/api_key_custom_content_douban"
                android:textAppearance="@style/TextAppearance.Wizard.Content" />

            <Button
                android:id="@+id/custom_douban"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/wizard_content_horizontal_margin_with_12dp_padding"
                android:layout_marginRight="@dimen/wizard_content_horizontal_margin_with_12dp_padding"
                android:layout_marginTop="@dimen/wizard_content_vertical_margin_with_16dp_padding"
                android:layout_marginBottom="@dimen/wizard_content_vertical_margin_with_16dp_padding"
                android:text="@string/api_key_custom_action_douban"
                android:textSize="@dimen/wizard_content_text_size"
                style="@style/Widget.AppCompat.Button.Borderless.Colored" />
        </LinearLayout>
    </FrameLayout>
</ScrollView>
